# rume

./: .ccls  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cbindgen.rime_api.toml  cbindgen.rime_levers_api.toml  cbindgen.rume_api.toml  deps.mk  package.json
data/test/: config_compiler_test.yaml
doc/: OLD_README-mac.md  OLD_README-windows.md
include/: rume_api.h  rume_extension.h
sample/: README.md
scripts/: action-install-plugins-macos.sh  add-upstream.sh  format-lint.sh  install-boost.sh  install-plugins.sh  rime-new-plugin.sh
src/: CMakeLists.txt  lib.rs  rime_api.rs  rime_api_c.rs  rime_levers_api.rs  rime_levers_api_c.rs  rume_api.rs  rume_api_c.rs
src/rime/: component.rs  core_module.cc  core_module.rs  deployer.rs  mod.rs  module.rs  registry.rs  schema.rs  service.rs  setup.rs
src/rime/algo/: encoder.cc  strings.h
src/rime/config/: config_component.rs  config_data.rs  config_types.rs  mod.rs  plugins.rs
src/rime/dict/: dict_compiler.h  dictionary.rs  entry_collector.cc  user_dictionary.cc
src/rime/lever/: custom_settings.rs  levers_module.rs  mod.rs
src/rume/: config_handler.rs  engine.rs  key_table.rs  logger.rs  mod.rs  session.rs  version.rs
src/rume/bin_parser/: mod.rs  (+1 more)
src/rume_api_c/: base.rs  key_code_to_key_table.rs  mod.rs  rume_api_c_impl.rs  utils.rs
src/test/: config_test.rs
test/: config_test.cc  dictionary_test.cc  strings_test.cc
test/rume_c/: .gitignore  main.c  run.sh  test_rume.c
tools/: rime_console.cc  rime_patch.rs  rume_deployer.rs  rume_patch.rs  test_rume_patch.rs
(+2 files in other folders)
