[package]
name = "rime"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "rume_patch"
path = "tools/rume_patch.rs"

[lib]
crate-type = ["staticlib", "lib"]
name = "rume"
path = "src/lib.rs"
