[package]
name = "rume"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
hashlink = "0.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
yaml-rust2 = "0.10.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "rume_patch"
path = "tools/rume_patch.rs"

[[bin]]
name = "rume_deployer"
path = "tools/rume_deployer.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "rume"
path = "src/lib.rs"
